# chess

./: .gitignore  CMakeLists.txt
doc/: sources_used.txt
include/Chess/: board.hpp  game.hpp
include/Chess/Pieces/: bishop.hpp  king.hpp  knight.hpp  pawn.hpp  pieces.hpp  queen.hpp  rook.hpp
src/: board.cpp  game.cpp  main.cpp
src/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  pieces.cpp  queen.cpp  rook.cpp
